--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Connect to database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/braincon
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
