--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 		<version>3.0.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mynotes</groupId>
-	<artifactId>my-notes</artifactId>
+	<groupId>com.braincon</groupId>
+	<artifactId>braincon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>My Notes</name>
-	<description>My Notes Application</description>
+	<name>BrainConApplication</name>
+	<description>Braincon</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 
 	<dependencies>
